fix: footer position on firefox and footer size on certain screen widths

--- a/src/style/components/Parallax.css
+++ b/src/style/components/Parallax.css
@@ -67,10 +67,11 @@ https://keithclark.co.uk/articles/pure-css-parallax-websites/
     position: fixed;
     width: 200%;
     height: 200%;
-    top: -68%;
+    bottom: 4vh;
     left: -45%;
     z-index: 0;
     transform: scale(1.02);
+    /* background-color: red; */
 }
 
 .parallax-image-safari {
@@ -90,10 +91,12 @@ https://keithclark.co.uk/articles/pure-css-parallax-websites/
 @media screen and (max-width: 1024px) {
     .parallax-image {
         width: 534%;
-        height: 350%;
-        top: -160%;
+        height: 430%;
+        top: -155%;
         left: -220%;
-        transform: scale(.6);
+        transform: scale(.2);
+        
+        /* background-image: linear-gradient(red, blue, green); */
     }
 
     .parallax-image-safari {
@@ -109,10 +112,11 @@ https://keithclark.co.uk/articles/pure-css-parallax-websites/
     .parallax-image {
         position: fixed;
         width: 540%;
-        height: 440%;
+        height: 430%;
         top: -160%;
         left: -220%;
         transform: scale(.2);
+        /* background-image: linear-gradient(red, blue, green); */
     }
 
     .parallax-image-safari {
@@ -124,11 +128,13 @@ https://keithclark.co.uk/articles/pure-css-parallax-websites/
 
 @media screen and (max-width: 500px) {
     .parallax-image {
-        height: 490%;
-        top: -180%;
+        /* position: fixed; */
+        height: 430%;
+        top: -160%;
+        /* background-image: linear-gradient(red, blue, green); */
     }
     .parallax_layer_back {
-        height: 420vh;
+        height: 400vh;
     }
 }
 
